@@ -37,9 +37,9 @@
 #include "corelib/Report.h"
 #include "corelib/ItemData.h"
 #include "corelib/corelib.h"
-#include "os/file.h"
+#include "corelib/XML/XMLDefs.h"  // Required if testing "USE_XML_LIBRARY"
 
-#include "corelib/XML/XMLDefs.h"
+#include "os/file.h"
 
 #include <sys/types.h>
 #include <bitset>
